--- a/src/input.css
+++ b/src/input.css
@@ -26,6 +26,10 @@ body {
     background-color: #F4F4F4 !important;
     border-bottom: none !important;
 }
+table.dataTable thead th, table.dataTable thead td {
+    background-color: #F4F4F4 !important;
+    border-bottom: none !important;
+}
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
     border: none !important;
 }
@@ -69,6 +73,9 @@ table.dataTable.no-footer {
     width:150px !important;
     height:48px !important;
     margin: auto;
+}
+#market_table table.dataTable tbody th, table.dataTable tbody td[colspan="5"] {
+    padding: 20px 10px !important;
 }
 .purple-gradient {
     background: transparent linear-gradient(116deg, #2E34A7 0%, #8288EF 100%) 0% 0% no-repeat padding-box;
